<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.Hookz</groupId>
    <artifactId>Project2-2</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Project2-2</name>
    <description>Group 2's implementation of Project2-2.</description>
    <url>https://github.com/Hookz/Project2-2</url>
    <licenses>
        <license>
            <name>MIT</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
            <comments>All source code is under the MIT license.</comments>
        </license>
    </licenses>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/Hookz/Project2-2/issues</url>
    </issueManagement>
    <organization>
        <name>Maastricht University</name>
        <url>https://maastrichtuniversity.nl</url>
    </organization>
    <scm>
        <connection>scm:git:git@github.com/Hookz/Project2-2.git</connection>
        <developerConnection>scm:git:git@github.com/Hookz/Project2-2.git</developerConnection>
        <url>https://github.com/Hookz/Project2-2/tree/${project.scm.tag}</url>
        <tag>master</tag>
    </scm>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub OWNER Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/Hookz/Project2-2</url>
        </repository>
    </distributionManagement>
    <properties>
        <maven.compiler.target>10</maven.compiler.target>
        <maven.compiler.source>10</maven.compiler.source>
        <java.version>1.10</java.version>
    </properties>
    <developers>
        <developer>
            <name>Michal Jarski</name>
        </developer>
        <developer>
            <name>Arda Ntourali</name>
        </developer>
        <developer>
            <name>Elliot Doe</name>
        </developer>
        <developer>
            <name>Camille Bouvy</name>
        </developer>
        <developer>
            <name>Wafaa Aljbawi</name>
        </developer>
        <developer>
            <name>Tim Heideman</name>
        </developer>
    </developers>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <appendAssemblyId>false</appendAssemblyId>
                            <descriptors>
                                <descriptor>src/main/assembly/zip.xml</descriptor>
                            </descriptors>
                            <archive>
                                <manifest>
                                    <addClasspath>false</addClasspath>
                                    <mainClass>Group2.GUI.Launcher</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>

    </build>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.github.Hookz</groupId>
                <artifactId>Project2-2-GameInterop</artifactId>
                <version>1.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.github.Hookz</groupId>
                <artifactId>Project2-2-GameInterop</artifactId>
                <version>1.1</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>5.4.2</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>5.4.2</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
</project>